Fix home page styles breaking on short screens (#936)
* Restyle main-graphic-text-container to have a minimum height

* Restyle main-header-content to remove the extra positioning styling

* Fix navbar overlapping with main text

* Revert changes made to home.css

* Add font to main-graphic-text

* Revert changes made to base.css

* Add transition for smoother transition between diff screen sizes

* Change transition time

* Remove extra css from home.css

* Apply suggestions from code review


---------

--- a/app/recordtransfer/static/recordtransfer/css/base/navbar.css
+++ b/app/recordtransfer/static/recordtransfer/css/base/navbar.css
@@ -7,8 +7,8 @@ header {
 }
 
 header.homepage {
-    position: absolute;
-    background-color: transparent;
+    position: relative;
+    background-color: primary;
     box-shadow: none;
 }
 
